--- a/pom.xml
+++ b/pom.xml
@@ -180,7 +180,7 @@
 		<dependency>
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-redis</artifactId>
-			<version>2.0.2.RELEASE</version>
+			<version>1.8.6.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -197,6 +197,16 @@
 			<groupId>org.apache.maven.plugins</groupId>
 			<artifactId>maven-compiler-plugin</artifactId>
 			<version>3.3</version>
+		</dependency>
+		<dependency>
+			<groupId>com.github.zhanhb</groupId>
+			<artifactId>thymeleaf-layout-dialect</artifactId>
+			<version>2.1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.github.mxab.thymeleaf.extras</groupId>
+			<artifactId>thymeleaf-extras-data-attribute</artifactId>
+			<version>2.0.1</version>
 		</dependency>
 	</dependencies>
 	<build>
