--- a/pom.xml
+++ b/pom.xml
@@ -261,6 +261,21 @@
 			</dependency> <dependency> <groupId>com.github.mxab.thymeleaf.extras</groupId> 
 			<artifactId>thymeleaf-extras-data-attribute</artifactId> <version>2.0.1</version> 
 			</dependency> -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-core</artifactId>
+			<version>4.2.3.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+			<version>4.2.3.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.session</groupId>
+			<artifactId>spring-session</artifactId>
+			<version>1.3.1.RELEASE</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>spring4_mybatis3</finalName>
